# bond-math

./: .editorconfig  .eslintignore  .eslintrc.json  .gitignore  .prettierignore  .prettierrc  LOCAL_DEV_GUIDE.md  Makefile  README.md  commitlint.config.js  contributing.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
.claude/: settings.local.json
.github/workflows/: cd.yml  ci.yml
.husky/: pre-commit
docs/: openapi.yaml
docs/adr/: 0001-architecture-as-code.md  0002-service-languages.md  0003-cloudflare-hosting.md  0004-identity-provider-auth0.md  0005-zero-trust-authorization.md  0006-gateway-worker.md  0007-centralized-day-count-microservice.md  0008-same-origin-routing.md  0009-deployment-approach.md  0010-architecture-as-code-conventions.md  0010-http-routing-framework-standards.md  0011-http-routing-framework-standards.md  0011-symmetric-jwt-for-internal-auth.md  0012-scope-based-authorization.md  0013-structured-logging-standards.md  0014-python-workers-framework.md  0015-automated-secret-rotation.md
docs/architecture/: ir.json  workspace.dsl
docs/architecture/diagrams/: class-diagram-bond-valuation.puml  class-diagram-daycount.puml  class-diagram-gateway.puml  class-diagram-metrics.puml  class-diagram-pricing.puml  class-diagram-ui.puml  structurizr-Components_bond_valuation.puml  structurizr-Components_daycount.puml  structurizr-Components_gateway.puml  structurizr-Components_metrics.puml  structurizr-Components_pricing-key.puml  structurizr-Components_pricing.puml  structurizr-Components_ui.puml  structurizr-Containers-key.puml  structurizr-Containers.puml  structurizr-Deployment_development-key.puml  structurizr-Deployment_development.puml  structurizr-Deployment_preview-key.puml  structurizr-Deployment_preview.puml  structurizr-Deployment_production-key.puml  structurizr-Deployment_production.puml  structurizr-SystemContext-key.puml  structurizr-SystemContext.puml
docs/architecture/docs/: index.md  services.md
docs/architecture/docs/components/: bond-valuation.md  daycount.md  gateway.md  metrics.md  pricing.md  ui.md
docs/design/: authorization-model.md  request-flow.md
docs/reference/: aac-style-guide.md  authentication.md  bond-valuation.md  daycount.md  deployment.md  gateway.md  math-service-selection.md  metrics.md  pricing.md  routing-standards.md
docs/standards/: code-documentation-standards.md  testing-standards.md
iac/: Makefile  README.md
iac/tf/: .gitignore  README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
iac/workers/: .dev.vars.example  README.md  daycount.toml  gateway.toml  metrics.toml  pricing.toml  requirements-valuation.txt  valuation.toml
libs/flarelette/: INSTALL.md  pyproject.toml
libs/flarelette/src/flarelette/: __init__.py  app.py  errors.py  logging.py  request.py  response.py  router.py  service.py  validation.py
libs/flarelette/tests/: test_app.py  test_auth.py  test_response.py  test_validation.py
libs/microapi/: INSTALL.md  pyproject.toml
libs/microapi/src/microapi/: __init__.py  auth.py  logging.py  middleware.py  request.py  response.py  service.py
libs/microapi/tests/: test_auth.py  test_router.py
libs/workers-py/: README.md  pyproject.toml
libs/workers-py/src/workers_py/: __init__.py  app.py  errors.py  logging.py  middleware.py  request.py  response.py  router.py  validation.py
libs/workers-py/tests/: test_app.py  test_response.py  test_router.py  test_validation.py
schemas/: aac-ir.json
scripts/: setup-tools.ps1  setup-tools.sh  start-local-stack.ps1  start-local-stack.sh
scripts/aac/: package-lock.json  package.json  vitest.config.ts
scripts/aac/src/: cli.ts  dsl-builder.ts  extract.ts  generate-class-diagrams-cli.ts  generate-class-diagrams.ts  generate-docs-cli.ts  generate-docs.ts  generate-dsl-cli.ts  generate-dsl.ts  render-diagrams-cli.ts  render-diagrams.ts  types.ts  utils.test.ts  utils.ts  validate-cli.ts  validate.test.ts  validate.ts
scripts/aac/src/1-extract/: cli.ts  index.ts
scripts/aac/templates/: component.md.njk  index.md.njk  services.md.njk
scripts/tools/structurizr-cli/: README.md
services/bond-valuation/: README.md  pyproject.toml  wrangler.toml
services/bond-valuation/src/: __init__.py  factory.py  main.py  mappers.py  types.py
services/bond-valuation/src/bond_schedule/: __init__.py  builder.py
services/bond-valuation/src/calculators/: __init__.py  base.py  discounted.py  iam.py  regular.py
services/bond-valuation/src/core/: factory.py  mappers.py
services/bond-valuation/src/daycount/: __init__.py  daycount_client.py  daycount_local.py
services/bond-valuation/src/schedule/: __init__.py  builder.py
services/daycount/: README.md  openapi.yaml  package.json  tsconfig.json  vitest.config.ts
services/daycount/src/: auth.ts  conventions.ts  index.ts  logger.ts  scopes.ts  types.ts  utils.ts  validators.ts
services/daycount/test/: conventions.test.ts  scopes.test.ts  security.test.ts  utils.test.ts
services/gateway/: .eslintrc.json  README.md  package.json  tsconfig.json  vitest.config.ts
services/gateway/src/: auth0.ts  errors.ts  index.ts  jwt.ts  logger.ts  middleware.ts  router.ts  types.ts
services/gateway/test/: auth0.test.ts  errors.test.ts  jwt.test.ts  middleware.test.ts  router.test.ts
services/metrics/: README.md  pyproject.toml
services/metrics/src/: main.py
services/pricing/: README.md  pyproject.toml
services/pricing/src/: main.py
tools/: README.md
ui/: .env.example  .eslintrc.json  .gitignore  README.md  astro.config.mjs  eslint.config.js  package.json  tailwind.config.mjs  tsconfig.json  wrangler.toml
ui/public/: robots.txt  site.webmanifest
ui/src/: env.d.ts  service.ts
ui/src/components/: Auth0ProviderWithNavigate.tsx  Auth0Wrapper.astro  AuthButton.tsx  CallbackHandler.tsx  DayCountCalculator.tsx  Footer.astro  Header.astro  LoginButton.tsx  LogoutButton.tsx  ProfileContent.tsx  ThemeToggle.tsx
ui/src/layouts/: BaseLayout.astro
ui/src/pages/: about.astro  callback.astro  day-count.astro  index.astro  profile.astro
ui/src/styles/: global.css
(+22 files in other folders)
